--- a/pages/management/admin.ejs
+++ b/pages/management/admin.ejs
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <%- include('../components/header.ejs') %>
     <h1>Dashboard</h1>
     <section>
         <h2>Utilisateurs</h2>
-        <a href="">Liste des utilisateurs</a>
-        <a href="">Créer un utilisateur</a>
+        <a href="/users">Liste des utilisateurs</a>
+        <a href="/users/create">Créer un utilisateur</a>
     </section>
 </body>
 </html>
