--- a/pages/management/users/delete-users.ejs
+++ b/pages/management/users/delete-users.ejs
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>liste d'utilisateurs</h1>
+    <%- include('../../components/header.ejs')  %>
+    <h1>Suppression d'utilisateurs</h1>
+    <form action="">
+        <a href="/users">Annuler</a>
+        <button>Confirmer</button>
+    </form>
 </body>
 </html>
