--- a/pages/management/users/list-users.ejs
+++ b/pages/management/users/list-users.ejs
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Suppression d'utilisateurs</h1>
-    <form action="">
-        <a href="/users">Annuler</a>
-        <button>Confirmer</button>
-    </form>
+    <%- include('../../components/header.ejs')  %>
+    <h1>liste d'utilisateurs</h1>
 </body>
 </html>
