--- a/index.ejs
+++ b/index.ejs
@@ -7,15 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <%- include('./pages/components/header.ejs')  %>
     <h1>Accueil</h1>
-    <nav>
-      <a href="/">Accueil</a>
-      <a href="/contact">Contact</a>
-    </nav>
     <img src="images/téléchargement.jpeg" alt="" />
     <% if(hello === 'Bonjour') { %>
-    <p> <%= hello %> <%= year %> </p>
-   <% } %>
-   <!--  -->
+    <p><%= hello %> <%= year %></p>
+    <% } %>
+    <!--  -->
   </body>
 </html>
