--- a/pages/management/users/create-users.ejs
+++ b/pages/management/users/create-users.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Create user</title>
 </head>
 <body>
-    <h1>Creation d'un utilisateur user</h1>
+    <%- include('../../components/header.ejs')  %>
+    <h1>Creation d'un utilisateur</h1>
     <form action="">
         <div>
             <label for="lastname">Nom</label>
