--- a/pages/signup.ejs
+++ b/pages/signup.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Mis à jour des utilisateurs</h1>
+    <%- include('../pages/components/header.ejs')  %>
+    <h1>Inscription</h1>
     <form action="">
         <div>
             <label for="lastname">Nom</label>
@@ -20,7 +21,17 @@
             <label for="email">Email</label>
             <input type="text" id="email" name="email">
         </div>
-        <button>Modifier</button>
+        <div>
+                <label for="password">mot de passe</label>
+                <input type="text" id="password" name="password">
+        </div>
+        <div>
+            <label for="confirm">Confirmation Mot de passe</label>
+            <input type="text" id="confirm" name="confirm">
+        </div>
+        <button>S'inscrire</button>
     </form>
+    <p>Déjà un compte ? <a href="/singin">Connectez-vous !</a></p>
+    
 </body>
 </html>
