--- a/pages/management/users/create-users.ejs
+++ b/pages/management/users/create-users.ejs
@@ -9,7 +9,7 @@
 <body>
     <%- include('../../components/header.ejs')  %>
     <h1>Creation d'un utilisateur</h1>
-    <form action="">
+    <form action="/users/create/add" method="POST">
         <div>
             <label for="lastname">Nom</label>
             <input type="text" id="lastname" name="lastname">
@@ -23,13 +23,26 @@
             <input type="text" id="email" name="email">
         </div>
         <div>
-                <label for="password">mot de passe</label>
-                <input type="text" id="password" name="password">
+            <label for="password">mot de passe</label>
+            <input type="password" id="password" name="password">
         </div>
         <div>
             <label for="confirm">Confirmation Mot de passe</label>
-            <input type="text" id="confirm" name="confirm">
+            <input type="password" id="confirm" name="confirm">
         </div>
+        <div>
+        <label for="street">N° et nom de voie</label>
+        <input type="text" id="street" name="street">
+    </div>
+    <div>
+            <label for="zipcode">Code postal</label>
+            <input type="text" id="zipcode" name="zipcode" minlength="5" maxlength="5">
+        </div>
+        <div>
+            <label for="city">Ville</label>
+            <input type="text" id="city" name="city">
+        </div>
+            
         <button>créer</button>
     </form>
 </body>
