--- a/pages/management/users/update-users.ejs
+++ b/pages/management/users/update-users.ejs
@@ -21,6 +21,18 @@
             <label for="email">Email</label>
             <input type="text" id="email" name="email">
         </div>
+        <div>
+            <label for="street">N° et nom de voie</label>
+            <input type="text" id="street" name="street">
+        </div>
+        <div>
+            <label for="zipcode">Code postal</label>
+            <input type="text" id="zipcode" name="zipcode" minlength="5" maxlength="5">
+        </div>
+        <div>
+            <label for="city">Ville</label>
+            <input type="text" id="city" name="city">
+        </div>
         <button>Modifier</button>
     </form>
 </body>
