--- a/pages/signin.ejs
+++ b/pages/signin.ejs
@@ -15,7 +15,7 @@
         </div>
         <div>
                 <label for="password">mot de passe</label>
-                <input type="text" id="password" name="password">
+                <input type="password" id="password" name="password">
         </div>
         <button>Se connecter</button>
     </form>
