--- a/pages/management/users/list-users.ejs
+++ b/pages/management/users/list-users.ejs
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <%- include('../../components/header.ejs')  %>
+  </head>
+  <body>
+    <%- include('../../components/header.ejs') %>
     <h1>liste d'utilisateurs</h1>
-</body>
+    <% if(users) { %>
+    <table>
+      <tr>
+        <th>Nom et Prénom</th>
+        <th>Email</th>
+        <th>Adresse</th>
+        <th colspan="2">Actions</th>
+      </tr>
+      <% users.forEach(user => { %>
+      <tr>
+        <td>
+          <a href="/users/<%= user._id %>">
+            <%= user.lastname %> <%= user.firstname %>
+          </a>
+        </td>
+        <td><%= user.email %></td>
+        <td>
+          <%= user.address.street %> <br />
+          <%= user.address.zipcode%> <%= user.address.city %>
+        </td>
+        <td><a href="/users/<%= user._id %>/update">Modifier</a></td>
+        <td><a href="/users/<%= user._id %>/delete">Supprimer</a></td>
+      </tr>
+      <% }) %>
+    </table>
+    <%}%>
+  </body>
 </html>
