--- a/pages/sign/signup.ejs
+++ b/pages/sign/signup.ejs
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <%- include('../pages/components/header.ejs')  %>
+    <%- include('../components/header.ejs')  %>
     <h1>Inscription</h1>
-    <form action="">
+    <form action="/signup/create" method="POST">
         <div>
             <label for="lastname">Nom</label>
             <input type="text" id="lastname" name="lastname">
@@ -43,7 +43,7 @@
         </div>
         <button>S'inscrire</button>
     </form>
-    <p>Déjà un compte ? <a href="/singin">Connectez-vous !</a></p>
+    <p>Déjà un compte ? <a href="/signin">Connectez-vous !</a></p>
     
 </body>
 </html>
