--- a/pages/management/users/delete-users.ejs
+++ b/pages/management/users/delete-users.ejs
@@ -7,10 +7,10 @@
 </head>
 <body>
     <%- include('../../components/header.ejs')  %>
-    <h1>Suppression d'utilisateurs</h1>
-    <form action="">
+    <h1>Suppression de <%= detailsUser.lastname %> <%= detailsUser.firstname %></h1>
+    <form action="/users/<%= detailsUser._id %>/delete?_method=DELETE" method="POST">
         <a href="/users">Annuler</a>
         <button>Confirmer</button>
     </form>
 </body>
-</html>
+</html>                                                                                             
