--- a/pages/management/users/list-users.ejs
+++ b/pages/management/users/list-users.ejs
@@ -7,7 +7,10 @@
   </head>
   <body>
     <%- include('../../components/header.ejs') %>
-    <h1>liste d'utilisateurs</h1>
+    <h1>liste des utilisateurs</h1>
+    <% if (successDeleteUser) { %>
+        <p><%= successDeleteUser %></p>
+        <% } %>
     <% if(users) { %>
     <table>
       <tr>
